feat(golf): add pagination for getting all golfs
